feat: empty table

--- a/src/lang/pt.json
+++ b/src/lang/pt.json
@@ -207,7 +207,7 @@
 		}
 	},
 	"email": "Email",
-	"empty": "Nenhum item cadastrado",
+	"empty": "Nenhum item cadastrado.",
 	"entry": {
 		"deleteDialog": {
 			"title": "Excluir Cadastro",
